:bug:Fixed out of view add module modal (#237)

--- a/src/components/CustomModal/CustomModal.css
+++ b/src/components/CustomModal/CustomModal.css
@@ -88,7 +88,6 @@
 
   .ReactModal__Content.ReactModal__Content--after-open {
     position: sticky;
-    inset: 0 !important;
 
     width: 90%;
     max-height: 90vh !important;
@@ -105,15 +104,16 @@
   }
 
   .ReactModal__Content.ReactModal__Content--after-open.fit-content {
-    position: absolute;
-    top: 0 !important;
+    position: sticky;
+    top: max(10%, 10px);
     right: 0;
     left: 0;
     bottom: 0;
-    margin: auto;
+    margin-bottom: 10px;
   }
 
   .ReactModal__Content.ReactModal__Content--after-open.max-modal {
+    inset: 0 !important;
     top: 5vh !important;
     margin-bottom: 5vh;
   }
